# bitcoin

./: .gitignore  _dev.py  api.py  app.py  application.toml  datastruct.py  helper.py  large_order.py  main.py  new_kline_parser.py  pyproject.toml  requirements.txt  script.py  script_beta.py  settings.py  template.env  test.py
bitcoin/: main.py  utils.py
bitcoin/backtesting/: fetcher.py  models.py  order_block.py
bitcoin/conf/: __init__.py  logger.py  schema.py  settings.py
bitcoin/entanglement_theory/: parser.py  schema.py
bitcoin/scripts/: alert_strategy.py  ema_strategy.py  heatmap.py  large_order.py  scanner.py  script_ctl.py
bitcoin/trading/: exceptions.py  helper.py  utils.py
bitcoin/trading/backtesting/: order_block.py
bitcoin/trading/schema/: base.py
bitcoin/trading/strategy/order_block/: base.py  break_even.py  listener.py  manager.py  position.py  schema.py  strategy.py
bitcoin/trading/strategy/order_block/coin/: btc.py  eth.py
bitcoin/watcher/: base.py
bitcoin/web/: datastruct.py
bitcoin/web/templates/: index.html
bitget/: client.py
conf/: __init__.py  schema.py  settings.py
libs/bitget/example/: example_ws_contract.py
schema/: base.py
trading/: helper.py  utils.py
trading/schema/: base.py
trading/strategy/order_block/: base.py  break_even.py  btc.py  eth.py  listener.py  manager.py  position.py  schema.py
trading/strategy/order_block/coin/: btc.py  eth.py
web/: app.py
web/templates/: index.html
