[project]
name = "bitcoin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.11",
    "ccxt>=4.4.73",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[project.scripts]
script_ctl = "bitcoin.scripts.script_ctl:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
