[project]
name = "bitcoin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.11",
    "aiosqlite>=0.21.0",
    "ccxt>=4.4.73",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "rich>=14.0.0",
    "talipp>=2.5.0",
    "tortoise-orm>=0.25.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.scripts]
script_ctl = "bitcoin.scripts.script_ctl:app"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
